# eventsphere-be

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  MONITORING.md  docker-compose.yml  dy  prometheus.yml  sonar-project.properties  start-dev.ps1  start-dev.sh  test-monitoring.ps1
.github/workflows/: build-test.yml  code-cov.yml  deploy-dev.yml  main.yml  prod-dev.yml  sonar.yml  sonarcloud.yml
Readmes/: ad_readme.md
alerting/: alertmanager.yml  alerts.yml
grafana/dashboards/: alerts-dashboard.json  database-metrics.json  eventsphere-backend.json  eventsphere-overview.json  system-overview.json  transaction-metrics.json
migrations/: 20250502054734_create_transaction_table.sql  20250508201251_create_user_table.sql  20250508201312_create_refresh_token_table.sql  20250508201401_create_transaction_table.sql  20250524000001_create_balance_table.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/middleware/: auth.rs  mod.rs
src/api/v1/: auth.rs  events.rs  mod.rs  tickets.rs  transactions.rs  users.rs
src/common/: logging.rs  mod.rs  response.rs
src/controller/: health.rs  mod.rs
src/controller/advertisement/: ad_controller.rs  mod.rs  validation.rs
src/controller/auth/: auth_controller.rs  mod.rs  tests.rs
src/controller/event/: event.rs  event_controller.rs  mod.rs  tests.rs
src/controller/review/: review_controller.rs  tests.rs
src/controller/ticket/: tests.rs  ticket_controller.rs
src/controller/tiket/: mod.rs  tests.rs  ticket_controller.rs
src/controller/transaction/: mod.rs  tests.rs  transaction_controller.rs
src/dto/: mod.rs
src/dto/advertisement/: advertisement.rs  mod.rs
src/events/: mod.rs  ticket_events.rs
src/infrastructure/: mod.rs  redis_client.rs
src/infrastructure/advertisement/: cache.rs  connection_pool.rs  display_advertisement.rs
src/infrastructure/storage/: image_storage.rs  mod.rs
src/metrics/: fairing.rs  mod.rs  tests.rs
src/middleware/: auth.rs
src/model/: mod.rs
src/model/advertisement/: advertisement.rs  mod.rs
src/model/auth/: mod.rs  tests.rs  token.rs
src/model/event/: event.rs  mod.rs  tests.rs
src/model/review/: mod.rs  review.rs  tests.rs
src/model/ticket/: mod.rs  tests.rs  ticket.rs
src/model/tiket/: mod.rs  tests.rs  ticket.rs
src/model/transaction/: balance.rs  mod.rs  tests.rs  transaction.rs
src/model/user/: mod.rs  tests.rs  user.rs
src/repository/: event_repository.rs  factory.rs  mod.rs
src/repository/adapters/: postgres_adapter.rs
src/repository/advertisement/: ad_repo.rs  ad_repository.rs  mod.rs  psql_ad_repo.rs
src/repository/auth/: mod.rs  tests.rs  token_repo.rs
src/repository/event/: event_repo.rs  mod.rs
src/repository/review/: mod.rs  review_repository.rs  tests.rs
src/repository/ticket/: ticket_repository.rs
src/repository/tiket/: mod.rs  tests.rs  ticket_repository.rs
src/repository/transaction/: balance_repo.rs  mod.rs  tests.rs  transaction_repo.rs
src/repository/user/: mod.rs  tests.rs  user_repo.rs
src/service/: mod.rs
src/service/advertisement/: ad_service.rs  ad_service_factory.rs  ad_service_impl.rs  mod.rs
src/service/auth/: auth_service.rs  mod.rs  tests.rs
(+27 files in other folders)
