[package]
name = "eventsphere-be"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
image = "0.24"
base64 = "0.21"
url = "2.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rocket = { version = "0.5.0", features = ["json", "testing"] }
mockall = "0.11"
rstest = "0.17"