[package]
name = "eventsphere-be"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1"
image = "0.25.6"
base64 = "0.22.1"
url = "2.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.29.5", features = ["tokio-comp"], optional = true }
tracing-appender = "0.2"
jsonwebtokens = "1.2.0"
jsonwebtoken = "9.3.1"

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.25.0"

[features]
redis = ["dep:redis"]
