[package]
name = "eventsphere-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.5.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1"
image = "0.25.6"
base64 = "0.22.1"
url = "2.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.29.5", features = ["tokio-comp"], optional = true }
tracing-appender = "0.2"
jsonwebtokens = "1.2.0"
jsonwebtoken = "9.3.1"
warp = "0.3.7"
actix-web = "4.10.2"
once_cell = "1.9.0"
argon2 = { version = "^0.5.3", features = ["std"] }
env_logger = "0.11.8"
serial_test = "3.2.0"
prometheus = "0.13"
rocket_prometheus = "0.10"

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.25.0"

[features]
redis = ["dep:redis"]
